# RCRand

./: .gitignore  CMakeLists.txt  LICENSE  README.md  out.txt
src/: generator.c  generator.h  main.c
test/: greatest.h
test/visualizer/: bytemap.pde  distribution.pde  visualizer.pde
